add style.ss/ modif index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-Begu Alexandru 
-Administrarea aplicațiilor web
-Anul 4
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<p>Begu Alexandru </p>
+	<p>Administrarea aplicațiilor web</p>
+	<p>Anul 4</p>
+
+	
+</body>
+</html>
